include/m_core.h



typedef INT_PTR (*MIRANDASERVICE)(WPARAM, LPARAM);

typedef INT_PTR (*MIRANDASERVICEPARAM)(WPARAM, LPARAM, LPARAM);

typedef INT_PTR (*MIRANDASERVICEOBJ)(void*, WPARAM, LPARAM);

typedef INT_PTR (*MIRANDASERVICEOBJPARAM)(void*, WPARAM, LPARAM, LPARAM);


MIR_CORE_DLL(HANDLE)  CreateServiceFunction(const char *name, MIRANDASERVICE serviceProc);

MIR_CORE_DLL(HANDLE)  CreateServiceFunctionParam(const char *name, MIRANDASERVICEPARAM serviceProc, LPARAM lParam);

MIR_CORE_DLL(HANDLE)  CreateServiceFunctionObj(const char *name, MIRANDASERVICEOBJ serviceProc, void* object);

MIR_CORE_DLL(HANDLE)  CreateServiceFunctionObjParam(const char *name, MIRANDASERVICEOBJPARAM serviceProc, void* object, LPARAM lParam);

MIR_CORE_DLL(int)     DestroyServiceFunction(HANDLE hService);

MIR_CORE_DLL(bool)    ServiceExists(const char *name);


MIR_CORE_DLL(INT_PTR) CallService(const char *name, WPARAM wParam = 0, LPARAM lParam = 0);

MIR_CORE_DLL(INT_PTR) CallServiceSync(const char *name, WPARAM wParam = 0, LPARAM lParam = 0);
MIR_CORE_DLL(int)     CallFunctionAsync(void (__stdcall *func)(void *), void *arg);

MIR_CORE_DLL(void)    KillModuleServices(HINSTANCE hInst);

MIR_CORE_DLL(void)    KillObjectServices(void* pObject);

MIR_APP_DLL(INT_PTR)  CallProtoService(LPCSTR szModule, const char *szService, WPARAM wParam = 0, LPARAM lParam = 0);


///////////////////////////////////////////////////////////////////////////////
// exceptions

typedef DWORD (__cdecl *pfnExceptionFilter)(DWORD code, EXCEPTION_POINTERS* info);


MIR_CORE_DLL(pfnExceptionFilter) GetExceptionFilter(void);

MIR_CORE_DLL(pfnExceptionFilter) SetExceptionFilter(pfnExceptionFilter pMirandaExceptFilter);

///////////////////////////////////////////////////////////////////////////////
// language packs support

MIR_CORE_DLL(unsigned int) mir_hash(const void * key, unsigned int len);

///////////////////////////////////////////////////////////////////////////////
// lists

typedef int (*FSortFunc)(void*, void*);  // sort function prototype

// Assumes first 32 bit value of the data is the numeric key
// and uses it to perform sort/search operations, this results
// in much better performance as no compare function calls needed
// Incredibly useful for Hash Tables
#define NumericKeySort (FSortFunc)(void*) -1
#define HandleKeySort  (FSortFunc)(void*) -2
#define PtrKeySort     (FSortFunc)(void*) -3

typedef struct
{
	void**		items;
	int			realCount;
	int			limit;
	int			increment;

	FSortFunc	sortFunc;
}
	SortedList;


MIR_CORE_DLL(SortedList*) List_Create(int p_limit, int p_increment);

MIR_CORE_DLL(void)        List_Destroy(SortedList* p_list);

MIR_CORE_DLL(void*)       List_Find(SortedList* p_list, void* p_value);

MIR_CORE_DLL(int)         List_GetIndex(SortedList* p_list, void* p_value, int* p_index);

MIR_CORE_DLL(int)         List_IndexOf(SortedList* p_list, void* p_value);

MIR_CORE_DLL(int)         List_Insert(SortedList* p_list, void* p_value, int p_index);

MIR_CORE_DLL(int)         List_InsertPtr(SortedList* list, void* p);

MIR_CORE_DLL(int)         List_Remove(SortedList* p_list, int index);

MIR_CORE_DLL(int)         List_RemovePtr(SortedList* list, void* p);

MIR_CORE_DLL(void)        List_Copy(SortedList* s, SortedList* d, size_t itemSize);

MIR_CORE_DLL(void)        List_ObjCopy(SortedList* s, SortedList* d, size_t itemSize);


///////////////////////////////////////////////////////////////////////////////
// md5 functions

typedef struct mir_md5_state_s {
	UINT32 count[2];  /* message length in bits, lsw first */
	UINT32 abcd[4];    /* digest buffer */
	BYTE   buf[64];    /* accumulate block */
} mir_md5_state_t;


MIR_CORE_DLL(void) mir_md5_init(mir_md5_state_t *pms);

MIR_CORE_DLL(void) mir_md5_append(mir_md5_state_t *pms, const BYTE *data, size_t nbytes);

MIR_CORE_DLL(void) mir_md5_finish(mir_md5_state_t *pms, BYTE digest[16]);

MIR_CORE_DLL(void) mir_md5_hash(const BYTE *data, size_t len, BYTE digest[16]);


///////////////////////////////////////////////////////////////////////////////
// memory functions

MIR_C_CORE_DLL(void*)  mir_alloc(size_t);

MIR_C_CORE_DLL(void*)  mir_calloc(size_t);

MIR_C_CORE_DLL(void*)  mir_realloc(void* ptr, size_t);

MIR_C_CORE_DLL(void)   mir_free(void* ptr);


MIR_CORE_DLL(char*)    mir_strdup(const char* str);

MIR_CORE_DLL(wchar_t*) mir_wstrdup(const wchar_t* str);


MIR_CORE_DLL(char*)    mir_strndup(const char* str, size_t len);


///////////////////////////////////////////////////////////////////////////////
// modules

MIR_CORE_DLL(void) RegisterModule(HINSTANCE hInst);

MIR_CORE_DLL(void) UnregisterModule(HINSTANCE hInst);


MIR_CORE_DLL(HINSTANCE) GetInstByAddress(void* codePtr);


///////////////////////////////////////////////////////////////////////////////
// print functions

MIR_CORE_DLL(int)    mir_snprintf(char *buffer, size_t count, const char* fmt, ...);

MIR_CORE_DLL(int)    mir_vsnprintf(char *buffer, size_t count, const char* fmt, va_list va);

///////////////////////////////////////////////////////////////////////////////
// sha1 functions

#define MIR_SHA1_HASH_SIZE 20

struct mir_sha1_ctx
{
  ULONG H[5];
  ULONG W[80];
  int lenW;
  ULONG sizeHi, sizeLo;
};


template <size_t _Size>
inline int mir_snprintf(char(&buffer)[_Size], const char* fmt, ...)
{
	va_list args;
	va_start(args, fmt);
	int ret = mir_vsnprintf(buffer, _Size, fmt, args);
	va_end(args);
	return ret;
}


template <size_t _Size>
inline int mir_vsnprintf(char(&buffer)[_Size], const char* fmt, va_list va)
{
	return mir_vsnprintf(buffer, _Size, fmt, va);
}